Use Records instead of Lombok @Data for Contributor classes